kubernetes/soria-prospecting/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: soria-auth-proxy
  namespace: soria-prospecting
spec:
  forwardAuth:
    address: http://soria-oauth-proxy.soria-prospecting.svc.cluster.local:4180/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
      - X-Auth-Request-Access-Token
      - Authorization
