kubernetes/soria-prospecting/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soria-prospecting
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
