kubernetes/soria-prospecting/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soria-prospecting
  namespace: soria-prospecting
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: soria-prospecting-soria-auth-proxy@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: react-admin.soria-academie.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: soria-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soria-cockpit
                port:
                  number: 80
  tls:
    - hosts:
        - react-admin.soria-academie.fr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soria-oauth-callback
  namespace: soria-prospecting
spec:
  ingressClassName: traefik
  rules:
    - host: react-admin.soria-academie.fr
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: soria-oauth-proxy
                port:
                  number: 4180
  tls:
    - hosts:
        - react-admin.soria-academie.fr
